--- a/Web/Resources/Pages/CCGMember/Similar/SimilarSearch.fr.resx
+++ b/Web/Resources/Pages/CCGMember/Similar/SimilarSearch.fr.resx
@@ -117,25 +117,52 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Allpositions" xml:space="preserve">
-    <value>Tous les postes</value>
+  <data name="BEHAVIOURAL ELEMENTS" xml:space="preserve">
+    <value>ÉLÉMENTS COMPORTEMENTAUX</value>
   </data>
-  <data name="Back" xml:space="preserve">
-    <value>Avant</value>
+  <data name="CERTIFICATIONS" xml:space="preserve">
+    <value>CERTIFICATIONS</value>
+  </data>
+  <data name="Close" xml:space="preserve">
+    <value>Fermer</value>
+  </data>
+  <data name="CURRENT LEVEL" xml:space="preserve">
+    <value>NIVEAU ACTUEL</value>
+  </data>
+  <data name="Current Position Level" xml:space="preserve">
+    <value>Niveau de poste actuel</value>
+  </data>
+  <data name="h1Text" xml:space="preserve">
+    <value>Recherche de position similaire</value>
+  </data>
+  <data name="h4Text" xml:space="preserve">
+    <value>Sélectionnez tout ou partie des compétences et évaluations ci-dessous pour obtenir des postes similaires à votre poste actuel.</value>
   </data>
   <data name="Home" xml:space="preserve">
     <value>Page d'accueil</value>
   </data>
-  <data name="Next" xml:space="preserve">
-    <value>Prochain</value>
+  <data name="KNOWLEDGE ELEMENTS" xml:space="preserve">
+    <value>ÉLÉMENTS DE CONNAISSANCE</value>
   </data>
-  <data name="Offshore" xml:space="preserve">
-    <value>Côtier</value>
+  <data name="No Certifications Found" xml:space="preserve">
+    <value>Aucune certification trouvée</value>
   </data>
-  <data name="Onshore" xml:space="preserve">
-    <value>À terre</value>
+  <data name="SAME CERTIFICATIONS" xml:space="preserve">
+    <value>MÊMES CERTIFICATIONS</value>
   </data>
-  <data name="Question1" xml:space="preserve">
-    <value>Quel domaine aimeriez-vous explorer?</value>
+  <data name="SAME ELEMENT" xml:space="preserve">
+    <value>MÊME ÉLÉMENT</value>
+  </data>
+  <data name="SAME LEVEL" xml:space="preserve">
+    <value>MÊME NIVEAU</value>
+  </data>
+  <data name="Search Positions" xml:space="preserve">
+    <value>Rechercher des postes</value>
+  </data>
+  <data name="Submit" xml:space="preserve">
+    <value>Soumettre</value>
+  </data>
+  <data name="TECHNICAL ELEMENTS" xml:space="preserve">
+    <value>ÉLÉMENTS TECHNIQUES</value>
   </data>
 </root>
