Business web updates (#49)
* level value select fix

* similar update

* similar updates

* similar updates/home button

* similar update

* reference/image fixes

* button fix/links removed

* Similar update/Rotativa config

* Rotativa config

* pdf page edits

* disabling for level > 4

* similar updates

* name fixes

--- a/Web/Resources/Pages/CCGMember/Details.fr.resx
+++ b/Web/Resources/Pages/CCGMember/Details.fr.resx
@@ -141,6 +141,9 @@
   <data name="Next" xml:space="preserve">
     <value>Suivant</value>
   </data>
+  <data name="No Certifications" xml:space="preserve">
+    <value>Aucun certificat associées</value>
+  </data>
   <data name="POSITION DETAILS" xml:space="preserve">
     <value>DÉTAILS DU POSTE</value>
   </data>
@@ -149,9 +152,6 @@
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Précédent</value>
-  </data>
-  <data name="Print PDF" xml:space="preserve">
-    <value>Imprimer PDF</value>
   </data>
   <data name="Save PDF" xml:space="preserve">
     <value>Enregistrer PDF</value>
