--- a/Web/Resources/Pages/CCGMember/Similar/SimilarSearch.fr.resx
+++ b/Web/Resources/Pages/CCGMember/Similar/SimilarSearch.fr.resx
@@ -138,14 +138,26 @@
   <data name="h4Text" xml:space="preserve">
     <value>Sélectionnez tout ou partie des compétences et évaluations ci-dessous pour obtenir des postes similaires à votre poste actuel.</value>
   </data>
+  <data name="HIGHER LEVEL" xml:space="preserve">
+    <value>NIVEAU SUPÉRIEUR</value>
+  </data>
   <data name="Home" xml:space="preserve">
     <value>Page d'accueil</value>
   </data>
   <data name="KNOWLEDGE ELEMENTS" xml:space="preserve">
     <value>ÉLÉMENTS DE CONNAISSANCE</value>
   </data>
+  <data name="Next" xml:space="preserve">
+    <value>Suivant</value>
+  </data>
   <data name="No Certifications Found" xml:space="preserve">
     <value>Aucune certification trouvée</value>
+  </data>
+  <data name="pageSubmitted" xml:space="preserve">
+    <value>En fonction des compétences de votre profil actuel, quel pourcentage de correspondance recherchez-vous?</value>
+  </data>
+  <data name="Previous" xml:space="preserve">
+    <value>Précédent</value>
   </data>
   <data name="SAME CERTIFICATIONS" xml:space="preserve">
     <value>MÊMES CERTIFICATIONS</value>
