--- a/Web/Resources/Pages/CCGMember/CCGMember.resx
+++ b/Web/Resources/Pages/CCGMember/CCGMember.resx
@@ -121,7 +121,7 @@
     <value>All positions</value>
   </data>
   <data name="Back" xml:space="preserve">
-    <value>Back</value>
+    <value>Previous</value>
   </data>
   <data name="Next" xml:space="preserve">
     <value>Next</value>
