--- a/Web/Resources/Pages/CCGMember/Details.fr.resx
+++ b/Web/Resources/Pages/CCGMember/Details.fr.resx
@@ -121,7 +121,7 @@
     <value>ÉLÉMENTS COMPORTEMENTAUX</value>
   </data>
   <data name="CERTIFICATIONS" xml:space="preserve">
-    <value>CERTIFICATIONS</value>
+    <value>ATTESTATIONS</value>
   </data>
   <data name="Close" xml:space="preserve">
     <value>Fermer</value>
@@ -152,6 +152,9 @@
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Précédent</value>
+  </data>
+  <data name="Print PDF" xml:space="preserve">
+    <value>Imprimer PDF</value>
   </data>
   <data name="Save PDF" xml:space="preserve">
     <value>Enregistrer PDF</value>
