--- a/Web/Resources/Pages/CCGMember/Details.resx
+++ b/Web/Resources/Pages/CCGMember/Details.resx
@@ -150,6 +150,9 @@
   <data name="Previous" xml:space="preserve">
     <value>Previous</value>
   </data>
+  <data name="Print PDF" xml:space="preserve">
+    <value>Print PDF</value>
+  </data>
   <data name="Save PDF" xml:space="preserve">
     <value>Save PDF</value>
   </data>
