--- a/Web/Resources/Pages/CCGMember/Similar/SimilarDetails.fr.resx
+++ b/Web/Resources/Pages/CCGMember/Similar/SimilarDetails.fr.resx
@@ -121,7 +121,7 @@
     <value>ÉLÉMENTS COMPORTEMENTAUX</value>
   </data>
   <data name="CERTIFICATIONS" xml:space="preserve">
-    <value>CERTIFICATIONS</value>
+    <value>ATTESTATIONS</value>
   </data>
   <data name="Compare" xml:space="preserve">
     <value>Comparer les positions</value>
