--- a/Web/Resources/Pages/Candidate/Seagoing/Crew/Engineering/SimilarDetails.resx
+++ b/Web/Resources/Pages/Candidate/Seagoing/Crew/Engineering/SimilarDetails.resx
@@ -118,12 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Question1" xml:space="preserve">
-    <value>Which area would you like to explore?</value>
-  </data>
-  <data name="Seagoing" xml:space="preserve">
-    <value>Seagoing Positions</value>
-  </data>
-  <data name="Shoreside" xml:space="preserve">
-    <value>Shore side Positions</value>
+    <value>Would you like to compare or find similar positions with the organization to your selected position below?</value>
   </data>
 </root>
