--- a/Web/Resources/Pages/Candidate/Seagoing/Officer/Index.fr.resx
+++ b/Web/Resources/Pages/Candidate/Seagoing/Officer/Index.fr.resx
@@ -117,13 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Question1" xml:space="preserve">
-    <value>Which area would you like to explore?</value>
+  <data name="Eng" xml:space="preserve">
+    <value>Ingénierie</value>
   </data>
-  <data name="Seagoing" xml:space="preserve">
-    <value>Seagoing Positions</value>
+  <data name="Nav" xml:space="preserve">
+    <value>Navigation</value>
   </data>
-  <data name="Shoreside" xml:space="preserve">
-    <value>Shore side Positions</value>
+  <data name="Q1" xml:space="preserve">
+    <value>Veuillez sélectionner votre domaine d'emploi préféré</value>
   </data>
 </root>
