--- a/Web/Resources/Pages/Candidate/Shoreside/AllCandidateShoreside.fr.resx
+++ b/Web/Resources/Pages/Candidate/Shoreside/AllCandidateShoreside.fr.resx
@@ -117,13 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Question1" xml:space="preserve">
-    <value>Which area would you like to explore?</value>
+  <data name="AllPositions" xml:space="preserve">
+    <value>Choisissez une catégorie</value>
   </data>
-  <data name="Seagoing" xml:space="preserve">
-    <value>Seagoing Positions</value>
+  <data name="Filter" xml:space="preserve">
+    <value>Filtrer</value>
   </data>
-  <data name="Shoreside" xml:space="preserve">
-    <value>Shore side Positions</value>
+  <data name="Home" xml:space="preserve">
+    <value>Page d'accueil</value>
+  </data>
+  <data name="NoResult" xml:space="preserve">
+    <value>Aucun résultat correspondant trouvé</value>
   </data>
 </root>
