--- a/Web/Resources/Pages/Candidate/Shoreside/AllCandidateShoreside.resx
+++ b/Web/Resources/Pages/Candidate/Shoreside/AllCandidateShoreside.resx
@@ -117,13 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Question1" xml:space="preserve">
-    <value>Which area would you like to explore?</value>
+  <data name="AllPositions" xml:space="preserve">
+    <value>Select a category</value>
   </data>
-  <data name="Seagoing" xml:space="preserve">
-    <value>Seagoing Positions</value>
+  <data name="Fllter" xml:space="preserve">
+    <value>Filter</value>
   </data>
-  <data name="Shoreside" xml:space="preserve">
-    <value>Shore side Positions</value>
+  <data name="NoResults" xml:space="preserve">
+    <value>No matching results found</value>
   </data>
 </root>
