similar section/page save navigation updates

--- a/Web/Resources/Pages/CCGMember/Compare/Delta.fr.resx
+++ b/Web/Resources/Pages/CCGMember/Compare/Delta.fr.resx
@@ -136,7 +136,7 @@
     <value>COMPÉTENCES DIFFÉRENTES</value>
   </data>
   <data name="h2Results" xml:space="preserve">
-    <value>Résultats comparant deux positions</value>
+    <value>Résultats comparant les deux positions</value>
   </data>
   <data name="Home" xml:space="preserve">
     <value>Page d'accueil</value>
