--- a/Web/Resources/Pages/CCGMember/Compare/Delta.resx
+++ b/Web/Resources/Pages/CCGMember/Compare/Delta.resx
@@ -136,7 +136,7 @@
     <value>DIFFERING COMPETENCIES</value>
   </data>
   <data name="h2Results" xml:space="preserve">
-    <value>Results Comparing Two Positions</value>
+    <value>Results comparing the two positions</value>
   </data>
   <data name="KNOWLEDGE ELEMENTS" xml:space="preserve">
     <value>KNOWLEDGE ELEMENTS</value>
