--- a/Web/Resources/Pages/Candidate/Shoreside/AllCandidateShoreside.fr.resx
+++ b/Web/Resources/Pages/Candidate/Shoreside/AllCandidateShoreside.fr.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AllPositions" xml:space="preserve">
-    <value>Choisissez une catégorie</value>
+    <value>Choisissez parmi les postes ci-dessous</value>
   </data>
   <data name="Filter" xml:space="preserve">
     <value>Filtrer</value>
