--- a/Web/Resources/Pages/Candidate/Seagoing/Common/Details.fr.resx
+++ b/Web/Resources/Pages/Candidate/Seagoing/Common/Details.fr.resx
@@ -135,8 +135,17 @@
   <data name="MATCHING COMPETENCIES" xml:space="preserve">
     <value>COMPÉTENCES ASSOCIÉES</value>
   </data>
+  <data name="Next" xml:space="preserve">
+    <value>Suivant</value>
+  </data>
   <data name="POSITION DETAILS" xml:space="preserve">
     <value>DÉTAILS DU POSTE</value>
+  </data>
+  <data name="Position Level" xml:space="preserve">
+    <value>Niveau du poste</value>
+  </data>
+  <data name="Previous" xml:space="preserve">
+    <value>Précédent</value>
   </data>
   <data name="Question1" xml:space="preserve">
     <value>Souhaitez-vous comparer ou trouver des postes similaires au sein de l'organisation à votre poste sélectionné ci-dessous?</value>
