--- a/Web/Resources/Pages/CCGMember/Details.fr.resx
+++ b/Web/Resources/Pages/CCGMember/Details.fr.resx
@@ -117,9 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="BEHAVIOURAL ELEMENTS" xml:space="preserve">
-    <value>ÉLÉMENTS COMPORTEMENTAUX</value>
-  </data>
   <data name="CERTIFICATIONS" xml:space="preserve">
     <value>ATTESTATIONS</value>
   </data>
@@ -132,11 +129,8 @@
   <data name="Home" xml:space="preserve">
     <value>Page d'accueil</value>
   </data>
-  <data name="KNOWLEDGE ELEMENTS" xml:space="preserve">
-    <value>ÉLÉMENTS DE CONNAISSANCE</value>
-  </data>
-  <data name="Level" xml:space="preserve">
-    <value>Niveau</value>
+  <data name="LEVEL" xml:space="preserve">
+    <value>NIVEAU</value>
   </data>
   <data name="Next" xml:space="preserve">
     <value>Suivant</value>
@@ -152,11 +146,5 @@
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Précédent</value>
-  </data>
-  <data name="Save PDF" xml:space="preserve">
-    <value>Enregistrer PDF</value>
-  </data>
-  <data name="TECHNICAL ELEMENTS" xml:space="preserve">
-    <value>ÉLÉMENTS TECHNIQUES</value>
   </data>
 </root>
