Business web updates (#57)
* level value select fix

* similar update

* similar updates

* similar updates/home button

* similar update

* reference/image fixes

* button fix/links removed

* Similar update/Rotativa config

* Rotativa config

* pdf page edits

* disabling for level > 4

* similar updates

* name fixes

* candidate updates

* similar section/page save navigation updates

* nav data/pdf updates

* navigation updates

--- a/Web/Resources/Pages/CCGMember/Compare/Delta.fr.resx
+++ b/Web/Resources/Pages/CCGMember/Compare/Delta.fr.resx
@@ -136,7 +136,7 @@
     <value>COMPÉTENCES DIFFÉRENTES</value>
   </data>
   <data name="h2Results" xml:space="preserve">
-    <value>Résultats comparant deux positions</value>
+    <value>Résultats comparant les deux positions</value>
   </data>
   <data name="Home" xml:space="preserve">
     <value>Page d'accueil</value>
@@ -182,9 +182,6 @@
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Précédent</value>
-  </data>
-  <data name="Print PDF" xml:space="preserve">
-    <value>Imprimer PDF</value>
   </data>
   <data name="Save PDF" xml:space="preserve">
     <value>Enregistrer le PDF</value>
