--- a/Web/Resources/Pages/Mockups/Student/College_Electronic_List.fr.resx
+++ b/Web/Resources/Pages/Mockups/Student/College_Electronic_List.fr.resx
@@ -118,33 +118,33 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="level" xml:space="preserve">
-    <value>LEVEL</value>
+    <value>NIVEAU</value>
   </data>
   <data name="link" xml:space="preserve">
-    <value>https://www.ccg-gcc.gc.ca/college/MCTS-training-formation-SCTM/index-eng.html</value>
+    <value>https://www.ccg-gcc.gc.ca/careers-carrieres/MELDEV-training-formation-PPTEM/index-fra.html</value>
   </data>
   <data name="More Details" xml:space="preserve">
-    <value>More Details</value>
+    <value>Plus de détails</value>
   </data>
   <data name="PDAP" xml:space="preserve">
-    <value>Professional Development Apprenticeship Programs (PDAP)</value>
+    <value>Programme de perfectionnement professionnel et d'apprentissage (PPPA)</value>
   </data>
   <data name="positions" xml:space="preserve">
-    <value>POSITIONS</value>
+    <value>POSTES</value>
   </data>
   <data name="Previous" xml:space="preserve">
-    <value>Previous</value>
+    <value>Précédent</value>
   </data>
   <data name="print" xml:space="preserve">
-    <value>Print PDF</value>
+    <value>Imprimer cette page</value>
   </data>
   <data name="save" xml:space="preserve">
-    <value>Save PDF</value>
+    <value>Sauvegarder cette page</value>
   </data>
   <data name="seagoing" xml:space="preserve">
-    <value>SEAGOING POSITIONS</value>
+    <value>POSITIONS EN MER</value>
   </data>
   <data name="shoreside" xml:space="preserve">
-    <value>SHORESIDE POSITIONS</value>
+    <value>POSITIONS  À TERRE</value>
   </data>
 </root>
