--- a/Web/Resources/Pages/Mockups/Student/HS_MCTS_Details.fr.resx
+++ b/Web/Resources/Pages/Mockups/Student/HS_MCTS_Details.fr.resx
@@ -117,34 +117,43 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="behavioural" xml:space="preserve">
+    <value>ÉLÉMENTS COMPORTEMENTAUX</value>
+  </data>
+  <data name="certificates" xml:space="preserve">
+    <value>ATTESTATIONS</value>
+  </data>
+  <data name="close" xml:space="preserve">
+    <value>Fermer</value>
+  </data>
+  <data name="knowledge" xml:space="preserve">
+    <value>ÉLÉMENTS DE CONNAISSANCE</value>
+  </data>
   <data name="level" xml:space="preserve">
-    <value>LEVEL</value>
+    <value>NIVEAU</value>
   </data>
   <data name="link" xml:space="preserve">
-    <value>https://www.ccg-gcc.gc.ca/college/MCTS-training-formation-SCTM/index-eng.html</value>
-  </data>
-  <data name="More Details" xml:space="preserve">
-    <value>More Details</value>
+    <value>https://www.ccg-gcc.gc.ca/college/MCTS-training-formation-SCTM/index-fra.html</value>
   </data>
   <data name="PDAP" xml:space="preserve">
-    <value>Professional Development Apprenticeship Programs (PDAP)</value>
+    <value>Programme de perfectionnement professionnel et d'apprentissage (PPPA)</value>
   </data>
-  <data name="positions" xml:space="preserve">
-    <value>POSITIONS</value>
+  <data name="position" xml:space="preserve">
+    <value>DÉTAILS DU POSTE</value>
   </data>
-  <data name="Previous" xml:space="preserve">
-    <value>Previous</value>
+  <data name="poslevel" xml:space="preserve">
+    <value>Niveau du poste</value>
+  </data>
+  <data name="previous" xml:space="preserve">
+    <value>Précédent</value>
   </data>
   <data name="print" xml:space="preserve">
-    <value>Print PDF</value>
+    <value>Imprimer PDF</value>
   </data>
   <data name="save" xml:space="preserve">
-    <value>Save PDF</value>
+    <value>Enregistrer PDF</value>
   </data>
-  <data name="seagoing" xml:space="preserve">
-    <value>SEAGOING POSITIONS</value>
-  </data>
-  <data name="shoreside" xml:space="preserve">
-    <value>SHORESIDE POSITIONS</value>
+  <data name="technical" xml:space="preserve">
+    <value>ÉLÉMENTS TECHNIQUES</value>
   </data>
 </root>
