--- a/Web/Resources/Pages/Student/College/Cook.resx
+++ b/Web/Resources/Pages/Student/College/Cook.resx
@@ -123,6 +123,12 @@
   <data name="More Details" xml:space="preserve">
     <value>More Details</value>
   </data>
+  <data name="noseagoing" xml:space="preserve">
+    <value>No seagoing positions available</value>
+  </data>
+  <data name="noshoreside" xml:space="preserve">
+    <value>No shore side positions available</value>
+  </data>
   <data name="position" xml:space="preserve">
     <value>POSITION</value>
   </data>
